<!-- dialog_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light"
    android:padding="16dp">

    <EditText
        android:id="@+id/updateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        android:background="#ffff"
        android:layout_margin="10dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/updateContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:background="#ffff"
        android:layout_margin="10dp"
        android:padding="10dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/buttonUploadImage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:layout_marginTop="16dp"
                android:background="#ffff"
                android:gravity="center"
                android:layout_gravity="center"



                />
            <ImageView
                android:id="@+id/updateImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/this_is_image_updation"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:visibility="gone"
                android:layout_marginTop="16dp" />
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_data"
            android:layout_marginTop="16dp"
            android:background="#ffff"
            android:gravity="end"
            android:layout_marginStart="100dp"
            android:layout_gravity="center"



            />
    </LinearLayout>


</LinearLayout>
